Fix the get-my-resume button for more contrast

--- a/main.css
+++ b/main.css
@@ -276,6 +276,11 @@ html {
   display: inline-block;
   width: auto !important;
   margin-top: 1em;
+  background-color: #037043;
+}
+.btn-resume:hover,
+.btn-resume:focus {
+  background-color: #013a22;
 }
 
 .about-img-1 {
